[tool.poetry]
name = "modern-python"
version = "0.1.0"
description = "The hypermodern Python Project"
authors = ["Stephen Kilbourn <stephenkilbourn@gmail.com>"]
license = "MIT"
readme="README.md"
homepage = "https://github.com/stephenkilbourn/hypermodern-python"
repository = "https://github.com/stephenkilbourn/hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
modern-python = "modern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["modern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100
