[tool.poetry]
name = "kilbourn-modern-python"
version = "0.1.0"
description = "The hypermodern Python Project"
authors = ["Stephen Kilbourn <stephenkilbourn@gmail.com>"]
license = "MIT"
readme="README.md"
homepage = "https://github.com/stephenkilbourn/hypermodern-python"
repository = "https://github.com/stephenkilbourn/hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"
requests = "^2.27.1"
desert = "^2020.11.18"
marshmallow = "^3.15.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.1.11"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
mypy = "^0.941"
pytype = {version = "^2022.3.8", python = "3.9"}
typeguard = "^2.13.3"
flake8-annotations = "^2.7.0"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
xdoctest = "^1.0.0"
Sphinx = "^4.5.0"
sphinx-autodoc-typehints = "^1.18.1"
codecov = "^2.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
modern-python = "kilbourn_modern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["kilbourn_modern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100
